--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    //implementation 'com.gridmi.api:GridmiAPI:1.0.8'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Include GridmiAPI
+    implementation 'com.gridmi.api:GridmiAPI:1.0.8'
+
 }
